<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BuzzShelter</string>
    <string name="title_activity_main">Home</string>
    <string name="title_activity_welcome">BuzzShelter</string>
    <string name="buzzshelter" tools:keep="@string/buzzshelter">BuzzShelter</string>
    <string name="login" tools:keep="@string/login">Login</string>
    <string name="register" tools:keep="@string/register">Register</string>
    <string name="title_activity_login" tools:keep="@string/title_activity_login">Login</string>
    <string name="username" tools:keep="@string/username">Username:</string>
    <string name="password" tools:keep="@string/password">Password:</string>
    <string name="logout">Logout</string>
    <string name="title_activity_register" tools:keep="@string/title_activity_register">Register</string>
    <string name="name">Shelter Name:</string>
    <string name="retype_pass" tools:keep="@string/retype_pass">Retype Pass:</string>
    <string name="account" tools:keep="@string/account">Account:</string>
    <string name="email" tools:keep="@string/email">Email:</string>
    <string name="title_activity_list">Shelter List</string>
    <string name="title_activity_shelter">Shelter</string>
    <string name="back">Back</string>
    <string name="age_range">Age Range:</string>
    <string name="gender">Gender:</string>
    <string name="shelter_list">Shelter List</string>
    <string name="restrictions">Restrictions</string>
    <string name="capacity">Capacity</string>
    <string name="address">Address</string>
    <string name="special_notes">Special notes</string>
    <string name="phone_number">Phone number</string>
    <string name="android_logo">Android Logo</string>
    <string name="available">Available</string>
    <string name="search_criteria">Search Criteria</string>
    <string name="reserve_space">Reserve Space</string>
    <string-array name="gender_array">
        <item>Any</item>
        <item>Men</item>
        <item>Women</item>
    </string-array>
    <string-array name="age_array">
        <item>Any</item>
        <item>Children</item>
        <item>Families with newborns</item>
        <item>Young Adults</item>
    </string-array>
    <string name="title_activity_reserve">Reserve Space</string>
    <string name="reserve">Reserve</string>
    <string name="type">Type:</string>
    <string name="amount">Amount:</string>
    <string name="title_activity_reserve_list">Reservations</string>
    <string name="details">Details:</string>
    <string name="reservations">Reservations</string>
    <string name="cancel_reservation">Cancel Reservation</string>
    <string name="go_back">Go Back</string>
    <string name="textview">TextView</string>
    <string name="none">None</string>
    <string name="title_activity_maps">Map</string>
    <string name="show_in_map">Show In Map</string>
</resources>
